# MineAFK

./: .gitignore  LICENSE.md  README.md  config.ini  config.py  main.py  mouse-position.py  pyproject.toml  requirements.txt  version.txt
.github/workflows/: codeql-analysis.yml
app/: build.sh  pickaxe.icns
modules/: admin.py  check_version.py  config.py  logger.py  welcome_message.py  windows_management.py
